# bifrost

./: .gitignore  .hgignore  .hgtags  BFCounter  BFCounter.cpp  BFGraph.cpp  BlockedBloomFilter.hpp  BloomFilter.hpp  BuildContigs.cpp  BuildContigs.hpp  CMakeLists.txt  Changelog.md  Common.hpp  CompressedCoverage.cpp  CompressedCoverage.hpp  CompressedSequence.cpp  CompressedSequence.hpp  Contig.cpp  Contig.hpp  ContigMapper.cpp  ContigMapper.hpp  ContigMethods.cpp  ContigMethods.hpp  CountBF.cpp  CountBF.hpp  Doxyfile  DumpBF.cpp  DumpBF.hpp  FilterReads.cpp  FilterReads.hpp  FindContig.cpp  FindContig.hpp  HashTables.hpp  Kmer.cpp  Kmer.hpp  KmerHashTable.h  KmerIntPair.cpp  KmerIntPair.hpp  KmerIterator.cpp  KmerIterator.hpp  (+34 more)
_google/sparsehash/: sparseconfig.h
doc/tutorial/: Intro.md
docs/: Makefile  doc.tex  refsBFG.bib
docs/graphs/: threadtime_contigs.1.gnu  threadtime_contigs1.gnu  threadtime_filter.1.gnu  threadtime_filter1.gnu  time_contigs.sh  time_filter.sh
example/: README  example.sh  tinycontigs.correct  tinyread_1.fq  tinyread_2.fq
google/sparsehash/: sparseconfig.h
old/: ContigMethods.cpp  ContigRef.hpp  CountBF.cpp  Doxyfile  FindContig.cpp  FindContig.hpp  HashTables.hpp  KmerMapper.hpp  SimplifyGraph.cpp  debug.py  dot2png.sh
snippets/: compile_test.sh  test.cpp
src/: BFGraph.cpp  Bifrost.cpp  BitContainer.cpp  BitContainer.hpp  BlockedBloomFilter.cpp  BlockedBloomFilter.hpp  BuildContigs.cpp  CMakeLists.txt  Color.cpp  Color.hpp  ColorSet.cpp  ColorSet.hpp  ColorSet.tcc  ColoredCDBG.cpp  ColoredCDBG.hpp  ColoredCDBG.tcc  ColoredCDBG.tpp  Common.hpp  CompactedDBG.cpp  CompactedDBG.hpp  CompactedDBG.tcc  CompactedDBG.tpp  CompressedCoverage.cpp  CompressedCoverage.hpp  CompressedSequence.cpp  CompressedSequence.hpp  Contig.cpp  Contig.hpp  ContigMapper.cpp  ContigMapper.hpp  ContigMapper_cpy.cpp  ContigMethods.hpp  DataAccessor.hpp  DataAccessor.tcc  DataManager.hpp  DataStorage.hpp  DataStorage.tcc  FASTX_Parser.cpp  FASTX_Parser.hpp  File_Parser.hpp  (+46 more)
tests/: .gitignore  BlockedBloomFilterTest.cpp  BloomFilterTest.cpp  CompressedCoverageTest.cpp  CompressedSequenceTest.cpp  ContigMapperTest.cpp  ContigMethodsTest.cpp  KmerIteratorTest  KmerIteratorTest.cpp  KmerMapperTest.cpp  KmerTest.cpp  KmerTestExtended.cpp  Makefile  SimpleMultithreadTest.cpp  TODO  betatest.cpp  google  kmer_bloom_test.py  runKmerTest.sh  runtests.sh
tests/google/sparsehash/: sparseconfig.h
